--- a/assets/scss/_createpage.scss
+++ b/assets/scss/_createpage.scss
@@ -65,7 +65,7 @@
 .create-page-step-arrows{
 	position: relative;
 	left: 110%;
-	bottom: 50%;
+	bottom: 120px;
 	font-size: 1.5em;
 	color: $primary;
 	z-index: 10;
