--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -47,8 +47,12 @@
 		</h4>
 	</div>
 </div>
-
-<div class="complete-page-creation-container row" data-equalizer>
+<div class="row">
+	<a href="#page-creation-anchor">
+		<div class="small-1 small-centered columns"><i class="fa fa-angle-double-down down-arrow-scroll"></i></div>
+	</a>
+</div>
+<div class="complete-page-creation-container row" id="page-creation-anchor" data-equalizer>
 	<div class="large-4 columns" data-equalizer-watch>
 		<h3 class="primary-header">Easy Right?</h3>
 			<p class="page-creation-list">- We’ll guide you through the process</p>
