--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,7 +1,7 @@
 {% block content %} 
 <div class="row create-page-content">
 	<div class="large-12 columns">
-		<h2 class="secondary-header" id="create-page-headline">THE PROCESS OF Creating a dedicated Memory Collect site is easy. </h2>
+		<h2 class="secondary-header" id="create-page-headline">THE PROCESS OF Creating a dedicated Memory Collect site is easy </h2>
 	</div>
 </div>
 <div class="create-page-steps row" data-equalizer>
@@ -20,16 +20,16 @@
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
 	<div class="large-2 columns create-page-step" data-equalizer-watch>
-		<img src="assets/img/icon_10.jpg" alt="Step 3: Upload Photos and Videos" />
+		<img src="assets/img/icon_12.jpg" alt="Step 4: Choose Website Template" />
 		<h4 class="create-page-step-text">
-			Upload Photos and Videos
+			Choose Website Template
 		</h4>
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
 	<div class="large-2 columns create-page-step" data-equalizer-watch>
-		<img src="assets/img/icon_12.jpg" alt="Step 4: Choose Website Template" />
+		<img src="assets/img/icon_10.jpg" alt="Step 3: Upload Photos and Videos" />
 		<h4 class="create-page-step-text">
-			Choose Website Template
+			Upload Photos and Videos
 		</h4>
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
@@ -38,10 +38,10 @@
 		<h4 class="create-page-step-text">
 			Invite Friends and Participants
 		</h4>
-		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
+		<!-- <i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i> -->
 	</div>
-	<div class="large-2 columns create-page-step" data-equalizer-watch>
-		<img src="assets/img/icon_16.jpg" alt="Step 6: Launch Site" />
+	<div class="large-2 columns create-page-step" id="launch-site-step" data-equalizer-watch>
+		<img src="assets/img/icon_16.png" alt="Step 6: Launch Site" id="launch-image" />
 		<h4 class="create-page-step-text" id="launch-text">
 			Launch Site
 		</h4>
@@ -55,9 +55,9 @@
 <div class="complete-page-creation-container row" id="page-creation-anchor" data-equalizer>
 	<div class="large-4 columns" data-equalizer-watch>
 		<h3 class="primary-header">Easy Right?</h3>
+			<p class="page-creation-list">- No technical skills required</p>
 			<p class="page-creation-list">- We’ll guide you through the process</p>
-			<p class="page-creation-list">- No fancy technical skills required</p>
-			<p class="page-creation-list"> - Choose from over ___ templates.</p>
+			<p class="page-creation-list">- Choose from 10 customizable templates</p>
 	</div>
 	<div class="large-8 columns page-creation-right-info-container" data-equalizer-watch>
 		<h3 class="primary-header">You’re only a few clicks away from celebrating your loved ones for decades to come.</h3>
