--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -387,7 +387,7 @@ header {
   background-color: #772954; }
 
 .logo {
-  margin-top: 20px; }
+  margin-top: 10px; }
 
 .nav {
   float: right;
@@ -398,8 +398,9 @@ header {
 .nav-link {
   display: inline;
   padding-top: 9px;
-  padding-bottom: 5px;
-  border-top: 1px solid #dd4a26; }
+  padding-bottom: 9px;
+  border-top: 1px solid #dd4a26;
+  border-bottom: 1px solid #dd4a26; }
   .nav-link a {
     color: #FFFFFF;
     font-family: 'Comfortaa', cursive;
@@ -412,33 +413,42 @@ header {
     /* For Safari 3.1 to 6.0 */
     transition: all .5s; }
   .nav-link:hover {
-    border-top: 2px solid #dd4a26; }
+    border-top: 2px solid #dd4a26;
+    border-bottom: 2px solid #dd4a26; }
     .nav-link:hover a {
       color: #dd4a26; }
 
+.nav-active {
+  border-top: 2px solid #dd4a26;
+  border-bottom: 2px solid #dd4a26; }
+  .nav-active a {
+    color: #dd4a26; }
+
 .nav > li:nth-child(1) {
-  padding-left: 20px;
   position: relative;
   left: 20px; }
 
 .nav > li:nth-child(2) {
-  border-left: 1px solid #dd4a26;
+  /*
+  border-left: 1px solid $secondary;
+  */
   position: relative;
   left: 15px; }
 
 .nav > li:nth-child(3) {
-  border-left: 1px solid #dd4a26;
-  border-right: 1px solid #dd4a26;
+  /*
+  border-left: 1px solid $secondary;
+  border-right: 1px solid $secondary;	
+  */
   position: relative;
   left: 10px; }
 
 .nav > li:nth-child(4) {
-  border-right: 1px solid #dd4a26;
+  /*
+  border-right: 1px solid $secondary;
+  */
   position: relative;
   left: 5px; }
-
-.nav > li:nth-child(5) {
-  padding-right: 20px; }
 
 .search-icon-box {
   width: 30px;
@@ -549,12 +559,13 @@ footer {
     background-color: #772954; }
 
 #launch-text {
+  color: #FFFFFF;
   padding-top: 20px; }
 
 .create-page-step-arrows {
   position: relative;
   left: 110%;
-  bottom: 120px;
+  bottom: 150px;
   font-size: 1.5em;
   color: #772954;
   z-index: 10; }
@@ -568,6 +579,12 @@ footer {
   .down-arrow-scroll:hover {
     color: #dd4a26;
     cursor: pointer; }
+
+#launch-image {
+  margin-top: 5px; }
+
+#launch-site-step {
+  background-color: #dd4a26; }
 
 body {
   font-family: 'Comfortaa', cursive; }
