--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -2,7 +2,7 @@ header{
 	background-color: $primary;
 }
 .logo{
-	margin-top: 20px;
+	margin-top: 10px;
 }
 .nav{ 
 	float: right;
@@ -15,8 +15,9 @@ header{
 .nav-link{
 	display: inline;
 	padding-top: 9px;
-	padding-bottom: 5px;
+	padding-bottom: 9px;
 	border-top: 1px solid $secondary;
+	border-bottom: 1px solid $secondary;
 
 	
 	a{
@@ -33,6 +34,7 @@ header{
 
 	&:hover{
 		border-top: 2px solid $secondary;
+		border-bottom: 2px solid $secondary;
 
 		a{
 			color: $secondary;
@@ -40,30 +42,41 @@ header{
 	}
 }
 
+.nav-active{
+	border-top: 2px solid $secondary;
+	border-bottom: 2px solid $secondary;
+
+	a{
+		color: $secondary;
+	}
+}
+
 .nav > li:nth-child(1) {
-	padding-left: 20px;
 	position: relative;
 	left: 20px;
 }
 
 .nav > li:nth-child(2) {
+	/*
 	border-left: 1px solid $secondary;
+	*/
 	position: relative;
 	left: 15px;
 }
 .nav > li:nth-child(3) {
+	/*
 	border-left: 1px solid $secondary;
 	border-right: 1px solid $secondary;	
+	*/
 	position: relative;
 	left: 10px;
 }
 .nav > li:nth-child(4) {
+	/*
 	border-right: 1px solid $secondary;
+	*/
 	position: relative;
 	left: 5px;
-}
-.nav > li:nth-child(5) {
-    padding-right: 20px;
 }
 
 .search-icon-box{
