--- a/templates/includes/header.liquid
+++ b/templates/includes/header.liquid
@@ -1,15 +1,15 @@
 <header>
 	<div class="row">
-		<div class="large-2 columns logo">
+		<div class="medium-2 columns logo">
 			<img src="assets/img/logo.svg" alt="Memory Collect Logo" width="140px" height="140px" />
 		</div>
-		<div class="large-10 columns search-bar-container">
+		<div class="medium-10 columns search-bar-container">
 			<div class="search-icon-box">
 				<i class="fa fa-search search-icon"></i>
 			</div>
 			<input type="text" name="search" id="search-bar" placeholder="Search">
 		</div>
-		<div class="large-10 columns nav-container">
+		<div class="medium-10 columns nav-container">
 			<ul class="nav"> 
 				<li class="nav-link"><a href="#">About</a></li> 
 				<li class="nav-link"><a href="#">How it Works</a></li> 
