--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,46 +1,46 @@
 {% block content %} 
 <div class="row create-page-content">
-	<div class="large-12 columns">
+	<div class="medium-12 columns">
 		<h2 class="secondary-header" id="create-page-headline">THE PROCESS OF Creating a dedicated Memory Collect site is easy </h2>
 	</div>
 </div>
 <div class="create-page-steps row" data-equalizer>
-	<div class="large-2 columns create-page-step" data-equalizer-watch>
+	<div class="medium-2 columns create-page-step" data-equalizer-watch>
 		<img src="assets/img/icon_06.jpg" alt="Step 1: Configure Admin Settings" />
 		<h4 class="create-page-step-text">
 			Configure Admin Settings
 		</h4>
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
-	<div class="large-2 columns create-page-step" data-equalizer-watch>
+	<div class="medium-2 columns create-page-step" data-equalizer-watch>
 		<img src="assets/img/icon_08.jpg" alt="Step 2: Provide Honoree Information" />
 		<h4 class="create-page-step-text">
 			Provide Honoree Information
 		</h4>
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
-	<div class="large-2 columns create-page-step" data-equalizer-watch>
+	<div class="medium-2 columns create-page-step" data-equalizer-watch>
 		<img src="assets/img/icon_12.jpg" alt="Step 4: Choose Website Template" />
 		<h4 class="create-page-step-text">
 			Choose Website Template
 		</h4>
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
-	<div class="large-2 columns create-page-step" data-equalizer-watch>
+	<div class="medium-2 columns create-page-step" data-equalizer-watch>
 		<img src="assets/img/icon_10.jpg" alt="Step 3: Upload Photos and Videos" />
 		<h4 class="create-page-step-text">
 			Upload Photos and Videos
 		</h4>
 		<i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i>
 	</div>
-	<div class="large-2 columns create-page-step" data-equalizer-watch>
+	<div class="medium-2 columns create-page-step" data-equalizer-watch>
 		<img src="assets/img/icon_14.jpg" alt="Step 5: Invite Friends and Participants" />
 		<h4 class="create-page-step-text">
 			Invite Friends and Participants
 		</h4>
 		<!-- <i class="fa fa-arrow-circle-o-right create-page-step-arrows"></i> -->
 	</div>
-	<div class="large-2 columns create-page-step" id="launch-site-step" data-equalizer-watch>
+	<div class="medium-2 columns create-page-step" id="launch-site-step" data-equalizer-watch>
 		<img src="assets/img/icon_16.png" alt="Step 6: Launch Site" id="launch-image" />
 		<h4 class="create-page-step-text" id="launch-text">
 			Launch Site
@@ -53,19 +53,19 @@
 	</a>
 </div>
 <div class="complete-page-creation-container row" id="page-creation-anchor" data-equalizer>
-	<div class="large-4 columns" data-equalizer-watch>
+	<div class="medium-4 columns" data-equalizer-watch>
 		<h3 class="primary-header">Easy Right?</h3>
 			<p class="page-creation-list">- No technical skills required</p>
 			<p class="page-creation-list">- We’ll guide you through the process</p>
 			<p class="page-creation-list">- Choose from 10 customizable templates</p>
 	</div>
-	<div class="large-8 columns page-creation-right-info-container" data-equalizer-watch>
+	<div class="medium-8 columns page-creation-right-info-container" data-equalizer-watch>
 		<h3 class="primary-header">You’re only a few clicks away from celebrating your loved ones for decades to come.</h3>
 
-		<div class="large-8 columns" id="CTA-pretext">
+		<div class="medium-8 columns" id="CTA-pretext">
 			<p>READY TO START YOUR COLLECTION? CLICK HERE TO BEGIN >>></p>
 		</div>
-		<div class="large-4 columns">
+		<div class="medium-4 columns">
 			<a href="#" class="button create-page-button">CREATE YOUR SITE</a>
 		</div>
 	</div>
