Small modifications to css. Started on home page

--- a/templates/includes/footer.liquid
+++ b/templates/includes/footer.liquid
@@ -3,7 +3,7 @@
 		<ul class="inline-list footer-nav"> 
 			<li><a href="#">About</a></li> 
 			<li><a href="#">How It Works</a></li> 
-			<li><a href="#">Create a Site</a></li> 
+			<li><a href="/create">Create a Site</a></li> 
 			<li><a href="#">Contact</a></li> 
 			<li><a href="#">Feedback</a></li> 
 			<li><a href="#">Copywright</a></li>
