--- a/templates/includes/header.liquid
+++ b/templates/includes/header.liquid
@@ -1,7 +1,7 @@
 <header>
 	<div class="row">
 		<div class="medium-2 columns logo">
-			<img src="assets/img/logo.svg" alt="Memory Collect Logo" width="140px" height="140px" />
+			<a href="/"><img src="assets/img/logo.svg" alt="Memory Collect Logo" width="140px" height="140px" /></a>
 		</div>
 		<div class="medium-10 columns search-bar-container">
 			<div class="search-icon-box">
@@ -13,7 +13,7 @@
 			<ul class="nav"> 
 				<li class="nav-link"><a href="#">About</a></li> 
 				<li class="nav-link"><a href="#">How it Works</a></li> 
-				<li class="nav-link"><a href="#">Create Site</a></li> 
+				<li class="nav-link"><a href="/create">Create Site</a></li> 
 				<li class="nav-link"><a href="#">Contact</a></li> 
 				<li class="nav-link"><a href="#">Login/Sign Up</a></li> 
 			</ul>
