--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -586,13 +586,44 @@ footer {
 #launch-site-step {
   background-color: #dd4a26; }
 
-body {
+#title-holder {
+  margin-top: 45px; }
+  #title-holder h2, #title-holder h3 {
+    padding: 0px 15px;
+    text-transform: uppercase;
+    height: 28px;
+    line-height: 28px; }
+  #title-holder h2 {
+    font-size: 16px;
+    background-color: #772954;
+    color: #dd4a26; }
+    #title-holder h2 em {
+      color: #FFFFFF;
+      font-style: normal; }
+  #title-holder h3 {
+    margin-left: 1px;
+    font-size: 14px;
+    background-color: #afa89f;
+    color: #FFFFFF;
+    height: 28px;
+    margin-right: -1px; }
+
+body, h1, h2, h3, h4, h5, h6 {
   font-family: 'Comfortaa', cursive; }
 
 p {
   font-size: .8em;
-  line-height: 1.2em; }
+  line-height: 1.6em; }
 
+p em, p a, p strong {
+  font-weight: bold;
+  color: #dd4a26;
+  font-style: normal; }
+
+p a, p strong {
+  text-transform: uppercase; }
+
+h1,
 .primary-header {
   color: #772954;
   text-transform: uppercase;
