--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -12,18 +12,27 @@
 @import "nav";
 @import "footer";
 @import "createpage";
+@import "home";
 
-
-
-body{
+body, h1, h2, h3 ,h4, h5, h6{
 	font-family: 'Comfortaa', cursive;
 }
+
 p{
 	font-size: .8em;
-	line-height: 1.2em;
+	line-height: 1.6em;
+}
+p em, p a, p strong{
+	font-weight: bold;
+	color: $secondary;
+	font-style: normal;
 }
 
-
+p a, p strong
+{
+	text-transform: uppercase;
+}
+h1,
 .primary-header{
 	color: $primary;
 	text-transform: uppercase;
