--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -25,3 +25,12 @@
 	}
 }
 
+#create_collect_share-image{
+	margin-top: 20px;
+}
+
+.home-text{
+	margin-top: 30px;
+	line-height: 1.5em;
+	padding-right: 30px;
+}
