--- a/templates/includes/footer.liquid
+++ b/templates/includes/footer.liquid
@@ -2,7 +2,7 @@
 	<div class="row footer-container">
 		<ul class="inline-list footer-nav"> 
 			<li><a href="#">About</a></li> 
-			<li><a href="#">How It Works</a></li> 
+			<li><a href="/howitworks">How It Works</a></li> 
 			<li><a href="/create">Create a Site</a></li> 
 			<li><a href="#">Contact</a></li> 
 			<li><a href="#">Feedback</a></li> 
