--- a/templates/includes/header.liquid
+++ b/templates/includes/header.liquid
@@ -11,8 +11,8 @@
 		</div>
 		<div class="medium-10 columns nav-container">
 			<ul class="nav"> 
-				<li class="nav-link"><a href="#">About</a></li> 
-				<li class="nav-link"><a href="#">How it Works</a></li> 
+				<li class="nav-link"><a href="/about">About</a></li> 
+				<li class="nav-link"><a href="/howitworks">How it Works</a></li> 
 				<li class="nav-link"><a href="/create">Create Site</a></li> 
 				<li class="nav-link"><a href="#">Contact</a></li> 
 				<li class="nav-link"><a href="#">Login/Sign Up</a></li> 
