--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -6,13 +6,14 @@
 			</h2>
 			<h3 class="medium-4 columns">
 				Quick. Just three+easy+steps:
+				<img src="assets/img/create_collect_share.jpg" alt="Memory Collect: Create Collect Share" id="create_collect_share-image"/>
 			</h3>
+		<div class="medium-8">
+			<p class="home-text">
+				<em>At Memory Collect, you can create a place to collect and house memories, photos, videos to celebrate life events, milestones and achievements or even a life well lived.</em> Share your site privately with family members and friends, or publicly for all to see and share. <a href="create">Click here to get started.</a>
+			</p>
+			<img src="assets/img/icon_set_home.jpg" alt="Memory Collect Icons" width="300px"/>
 		</div>
-
-	<div class="medium-7 columns">
-		<p>
-			<em>At Memory Collect, you can create a place to collect and house memories, photos, videos to celebrate life events, milestones and achievements or even a life well lived.</em> Share your site privately with family members and friends, or publicly for all to see and share. <a href="create">Click here to get started.</a>
-		</p>
 	</div>
 	<div class="medium-4 columns medium-offset-1">
 	
