--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -13,8 +13,10 @@
 @import "footer";
 @import "createpage";
 @import "home";
+@import "howitworks";
+@import "about";
 
-body, h1, h2, h3 ,h4, h5, h6{
+body, h1, h2, h3 ,h4, h5, h6, a, cite, blockquote{
 	font-family: 'Comfortaa', cursive;
 }
 
@@ -46,4 +48,20 @@ h1,
 	font-family: 'Comfortaa', cursive;
 	font-size: 1.6em;
 }
+
+.purple-title{
+	color: $primary;
+}
+
+.orange-title{
+	color: $secondary;
+}
+.gray-title{
+	color: $gray;
+}
+.white-title{
+	color: $white;
+}
+
+
 
