--- a/templates/includes/footer.liquid
+++ b/templates/includes/footer.liquid
@@ -1,10 +1,10 @@
 <footer>
 	<div class="row footer-container">
 		<ul class="inline-list footer-nav"> 
-			<li><a href="#">About</a></li> 
+			<li><a href="/about">About</a></li> 
 			<li><a href="/howitworks">How It Works</a></li> 
 			<li><a href="/create">Create a Site</a></li> 
-			<li><a href="#">Contact</a></li> 
+			<li><a href="/contact">Contact</a></li> 
 			<li><a href="#">Feedback</a></li> 
 			<li><a href="#">Copywright</a></li>
 			<li><a href="#">Privacy Policy</a></li>  
