--- a/templates/includes/header.liquid
+++ b/templates/includes/header.liquid
@@ -14,7 +14,7 @@
 				<li class="nav-link"><a href="/about">About</a></li> 
 				<li class="nav-link"><a href="/howitworks">How it Works</a></li> 
 				<li class="nav-link"><a href="/create">Create Site</a></li> 
-				<li class="nav-link"><a href="#">Contact</a></li> 
+				<li class="nav-link"><a href="/contact">Contact</a></li> 
 				<li class="nav-link"><a href="#">Login/Sign Up</a></li> 
 			</ul>
 		</div>
