--- a/templates/layouts/layout.liquid
+++ b/templates/layouts/layout.liquid
@@ -25,12 +25,13 @@
 
             {% include "footer" %}
         </div>
-        <!-- Script block allowing child pages to inject their own scripts -->
-      <!--   {% block scripts %}{% endblock %} -->
         {{ "jquery.js" | asset_url | script_tag }}
         {{ "foundation.min.js" | asset_url | script_tag }}
         {{ "app.js" | asset_url | script_tag }}
         {{ "foundation.equalizer.js" | asset_url | script_tag }}
+        <!-- Script block allowing child pages to inject their own scripts -->
+         {% block scripts %}{% endblock %}
+
           <script>
             $(document).foundation();
           </script>
