--- a/templates/includes/header.liquid
+++ b/templates/includes/header.liquid
@@ -15,7 +15,7 @@
 				<li class="nav-link"><a href="/howitworks">How it Works</a></li> 
 				<li class="nav-link"><a href="/create">Create Site</a></li> 
 				<li class="nav-link"><a href="/contact">Contact</a></li> 
-				<li class="nav-link"><a href="#">Login/Sign Up</a></li> 
+				<li class="nav-link"><a href="/login">Login/Sign Up</a></li> 
 			</ul>
 		</div>
 	</div>
